@@ -14,6 +14,9 @@ import com.thundax.kuzhambu.common.knowledge.model.chat.KnowledgeChatChoice;
 import com.thundax.kuzhambu.common.knowledge.model.chat.KnowledgeChatMessage;
 import com.thundax.kuzhambu.common.knowledge.model.chat.KnowledgeChatRequest;
 import com.thundax.kuzhambu.common.knowledge.model.chat.KnowledgeChatResult;
+import com.thundax.kuzhambu.common.knowledge.model.chat.KnowledgeChatSource;
+import com.thundax.kuzhambu.common.knowledge.model.chat.KnowledgeChatStreamHandler;
+import com.thundax.kuzhambu.common.knowledge.model.chat.KnowledgeChatUsage;
 import com.thundax.kuzhambu.common.knowledge.model.health.KnowledgeHealthResult;
 import com.thundax.kuzhambu.common.knowledge.model.item.KnowledgeItemDeleteRequest;
 import com.thundax.kuzhambu.common.knowledge.model.item.KnowledgeItemListRequest;
@@ -22,6 +25,10 @@ import com.thundax.kuzhambu.common.knowledge.model.item.KnowledgeItemResult;
 import com.thundax.kuzhambu.common.knowledge.model.item.KnowledgeItemUpsertRequest;
 import com.thundax.kuzhambu.common.knowledge.model.sync.KnowledgeSyncRequest;
 import com.thundax.kuzhambu.common.knowledge.model.sync.KnowledgeSyncResult;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
@@ -33,8 +40,11 @@ import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
+import org.springframework.http.client.ClientHttpResponse;
 import org.springframework.util.Assert;
 import org.springframework.util.StringUtils;
+import org.springframework.web.client.RestClientException;
+import org.springframework.web.client.RestClientResponseException;
 import org.springframework.web.client.RestOperations;
 
 public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
@@ -57,6 +67,8 @@ public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
     private final RestOperations restOperations;
     private final ObjectMapper objectMapper;
     private final KuzhambuKnowledgeProperties.FastGpt properties;
+    private final Object syncMonitor = new Object();
+    private volatile Boolean supportsSyncCache;
 
     public FastGptKnowledgeBaseClient(
             RestOperations restOperations, ObjectMapper objectMapper, KuzhambuKnowledgeProperties.FastGpt properties) {
@@ -153,6 +165,27 @@ public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
     @Override
     public KnowledgeSyncResult syncKnowledgeItem(KnowledgeSyncRequest request) {
         Assert.notNull(request, "Knowledge sync request must not be null");
+        KuzhambuKnowledgeProperties.FastGpt.SyncMode syncMode = properties.getSyncMode();
+        if (KuzhambuKnowledgeProperties.FastGpt.SyncMode.DISABLED.equals(syncMode)) {
+            return skippedSyncResult(request, "DISABLED");
+        }
+        if (KuzhambuKnowledgeProperties.FastGpt.SyncMode.AUTO.equals(syncMode) && !supportsFastGptSync()) {
+            return skippedSyncResult(request, "NOT_SUPPORTED");
+        }
+        try {
+            synchronized (syncMonitor) {
+                return doSyncKnowledgeItem(request);
+            }
+        } catch (RestClientResponseException ex) {
+            if (KuzhambuKnowledgeProperties.FastGpt.SyncMode.AUTO.equals(syncMode) && isNotSupportSync(ex)) {
+                supportsSyncCache = false;
+                return skippedSyncResult(request, "NOT_SUPPORTED");
+            }
+            throw ex;
+        }
+    }
+
+    private KnowledgeSyncResult doSyncKnowledgeItem(KnowledgeSyncRequest request) {
         String knowledgeBaseId = configuredKnowledgeBaseId();
         Map<String, Object> payload = new LinkedHashMap<>();
         putIfHasText(payload, "datasetId", knowledgeBaseId);
@@ -161,7 +194,19 @@ public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
         JsonNode body = post("/api/core/dataset/collection/sync", payload);
         JsonNode data = dataNode(body);
         return new KnowledgeSyncResult(
-                textValue(data, "syncId", textValue(data, "id", null)), textValue(data, "status", null), rawMap(body));
+                textValue(data, "syncId", textValue(data, "id", request.knowledgeItemId())),
+                textValue(data, "status", "SUCCEEDED"),
+                rawMap(body));
+    }
+
+    private KnowledgeSyncResult skippedSyncResult(KnowledgeSyncRequest request, String reason) {
+        Map<String, Object> raw = new LinkedHashMap<>();
+        putIfHasText(raw, "provider", PROVIDER);
+        putIfHasText(raw, "knowledgeItemId", request.knowledgeItemId());
+        putIfHasText(raw, "syncMode", properties.getSyncMode().name());
+        putIfHasText(raw, "skipReason", reason);
+        putIfNotNull(raw, "options", request.options());
+        return new KnowledgeSyncResult(request.knowledgeItemId(), "SUCCEEDED", raw);
     }
 
     @Override
@@ -184,27 +229,243 @@ public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
     @Override
     public KnowledgeChatResult chat(KnowledgeChatRequest request) {
         Assert.notNull(request, "Knowledge chat request must not be null");
+        Map<String, Object> payload = chatPayload(request, request.stream());
+        JsonNode body = post("/api/v1/chat/completions", payload, chatHeaders());
+        return chatResult(body, textOption(request.metadata(), "chatId"), request.model(), null, false);
+    }
+
+    @Override
+    public KnowledgeChatResult chatStream(KnowledgeChatRequest request, KnowledgeChatStreamHandler streamHandler) {
+        Assert.notNull(request, "Knowledge chat request must not be null");
+        Assert.notNull(streamHandler, "Knowledge chat stream handler must not be null");
+        Map<String, Object> payload = chatPayload(request, true);
+        ChatStreamResult streamResult = restOperations.execute(
+                "/api/v1/chat/completions",
+                HttpMethod.POST,
+                clientRequest -> {
+                    clientRequest.getHeaders().putAll(chatStreamHeaders());
+                    byte[] body = writeJson(payload).getBytes(StandardCharsets.UTF_8);
+                    clientRequest.getHeaders().setContentLength(body.length);
+                    clientRequest.getBody().write(body);
+                },
+                response -> readChatStream(response, streamHandler));
+        return chatResult(
+                streamResult.finalPayload(),
+                textOption(request.metadata(), "chatId"),
+                request.model(),
+                streamResult.content(),
+                true);
+    }
+
+    private Map<String, Object> chatPayload(KnowledgeChatRequest request, boolean stream) {
         Map<String, Object> payload = new LinkedHashMap<>();
         putIfHasText(payload, "appId", properties.getAppId());
         putIfHasText(payload, "chatId", textOption(request.metadata(), "chatId"));
         putIfHasText(payload, "model", request.model());
-        payload.put("stream", request.stream());
+        payload.put("stream", stream);
         payload.put("messages", chatMessages(request.messages()));
         putIfNotNull(payload, "metadata", request.metadata());
         mergeOptions(payload, request.options());
-        JsonNode body = post("/api/v1/chat/completions", payload, chatHeaders());
-        String content = extractChatContent(body);
-        String id = textValue(body, "id", textOption(request.metadata(), "chatId"));
-        String model = textValue(body, "model", request.model());
+        return payload;
+    }
+
+    private ChatStreamResult readChatStream(ClientHttpResponse response, KnowledgeChatStreamHandler streamHandler)
+            throws IOException {
+        ChatStreamAccumulator accumulator = new ChatStreamAccumulator();
+        StringBuilder eventBlock = new StringBuilder();
+        try (BufferedReader reader =
+                new BufferedReader(new InputStreamReader(response.getBody(), StandardCharsets.UTF_8))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                if (line.isBlank()) {
+                    if (appendChatStreamBlock(eventBlock.toString(), accumulator, streamHandler)) {
+                        return accumulator.toResult();
+                    }
+                    eventBlock.setLength(0);
+                    continue;
+                }
+                eventBlock.append(line).append('\n');
+            }
+        }
+        appendChatStreamBlock(eventBlock.toString(), accumulator, streamHandler);
+        return accumulator.toResult();
+    }
+
+    private boolean appendChatStreamBlock(
+            String eventBlock, ChatStreamAccumulator accumulator, KnowledgeChatStreamHandler streamHandler) {
+        if (!StringUtils.hasText(eventBlock)) {
+            return false;
+        }
+        String eventName = null;
+        for (String line : eventBlock.split("\\R")) {
+            if (line.startsWith("event:")) {
+                eventName = line.substring("event:".length()).trim();
+                continue;
+            }
+            if (!line.startsWith("data:")) {
+                continue;
+            }
+            String data = line.substring("data:".length()).trim();
+            if (!StringUtils.hasText(data)) {
+                continue;
+            }
+            if ("[DONE]".equals(data)) {
+                accumulator.markDone();
+                return true;
+            }
+            JsonNode body = readChatStreamPayload(data);
+            accumulator.remember(body);
+            boolean finalEvent = isFinalChatStreamEvent(eventName);
+            String delta = finalEvent && accumulator.hasContent() ? null : extractChatStreamDelta(body);
+            if (StringUtils.hasText(delta)) {
+                accumulator.append(delta);
+                streamHandler.onDelta(delta);
+            }
+            if (isChatStreamFinished(body)) {
+                accumulator.markFinal(body);
+            }
+            if (finalEvent) {
+                accumulator.markFinal(body);
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private boolean isFinalChatStreamEvent(String eventName) {
+        return "final".equalsIgnoreCase(eventName)
+                || "completed".equalsIgnoreCase(eventName)
+                || "completion".equalsIgnoreCase(eventName);
+    }
+
+    private boolean isChatStreamFinished(JsonNode body) {
+        JsonNode choices = body.path("choices");
+        if (!choices.isArray() || choices.isEmpty()) {
+            return false;
+        }
+        JsonNode choice = choices.get(0);
+        return StringUtils.hasText(textValue(choice, "finish_reason", textValue(choice, "finishReason", null)));
+    }
+
+    private JsonNode readChatStreamPayload(String data) {
+        try {
+            return objectMapper.readTree(data);
+        } catch (JsonProcessingException ex) {
+            throw new IllegalStateException("Failed to parse FastGPT stream payload", ex);
+        }
+    }
+
+    private String extractChatStreamDelta(JsonNode body) {
+        JsonNode choices = body.path("choices");
+        if (choices.isArray() && choices.size() > 0) {
+            JsonNode choice = choices.get(0);
+            String delta = textValue(choice.path("delta"), "content", null);
+            if (StringUtils.hasText(delta)) {
+                return delta;
+            }
+            return textValue(choice.path("message"), "content", null);
+        }
+        JsonNode dataNode = dataNode(body);
+        return textValue(dataNode, "content", textValue(dataNode, "answer", null));
+    }
+
+    private KnowledgeChatResult chatResult(
+            JsonNode body, String fallbackId, String fallbackModel, String contentOverride, boolean stream) {
+        JsonNode resultBody = body == null ? objectMapper.createObjectNode() : body;
+        JsonNode resultData = dataNode(resultBody);
+        String content = contentOverride == null ? extractChatContent(resultBody) : contentOverride;
+        String id = textValue(resultBody, "id", textValue(resultData, "id", fallbackId));
+        String model = textValue(resultBody, "model", textValue(resultData, "model", fallbackModel));
+        Map<String, Object> raw = new LinkedHashMap<>(rawMap(resultBody));
+        raw.putIfAbsent("provider", PROVIDER);
+        raw.putIfAbsent("stream", stream);
         return new KnowledgeChatResult(
                 id,
-                textValue(body, "object", "chat.completion"),
-                longValue(body, "created", null),
+                textValue(resultBody, "object", textValue(resultData, "object", "chat.completion")),
+                longValue(resultBody, "created", longValue(resultData, "created", null)),
                 model,
-                List.of(new KnowledgeChatChoice(0, new KnowledgeChatMessage("assistant", content), "stop")),
-                null,
-                Collections.emptyList(),
-                rawMap(body));
+                List.of(new KnowledgeChatChoice(
+                        0, new KnowledgeChatMessage("assistant", content), finishReason(resultBody))),
+                chatUsage(resultBody),
+                chatSources(resultBody),
+                raw);
+    }
+
+    private String finishReason(JsonNode body) {
+        JsonNode choices = body.path("choices");
+        if (choices.isArray() && !choices.isEmpty()) {
+            JsonNode choice = choices.get(0);
+            return textValue(choice, "finish_reason", textValue(choice, "finishReason", "stop"));
+        }
+        return "stop";
+    }
+
+    private KnowledgeChatUsage chatUsage(JsonNode body) {
+        JsonNode usage = firstPresent(
+                body.path("usage"),
+                dataNode(body).path("usage"),
+                responseDataNode(body).path("usage"));
+        if (usage.isMissingNode() || usage.isNull()) {
+            return null;
+        }
+        Integer promptTokens = intValue(usage, "promptTokens", intValue(usage, "prompt_tokens", null));
+        Integer completionTokens = intValue(usage, "completionTokens", intValue(usage, "completion_tokens", null));
+        Integer totalTokens = intValue(usage, "totalTokens", intValue(usage, "total_tokens", null));
+        if (promptTokens == null && completionTokens == null && totalTokens == null) {
+            return null;
+        }
+        return new KnowledgeChatUsage(promptTokens, completionTokens, totalTokens);
+    }
+
+    private List<KnowledgeChatSource> chatSources(JsonNode body) {
+        JsonNode sources = firstPresent(
+                body.path("sources"),
+                dataNode(body).path("sources"),
+                responseDataNode(body).path("sources"),
+                body.path("quoteList"),
+                dataNode(body).path("quoteList"),
+                responseDataNode(body).path("quoteList"));
+        if (!sources.isArray() || sources.isEmpty()) {
+            return Collections.emptyList();
+        }
+        List<KnowledgeChatSource> results = new ArrayList<>();
+        for (JsonNode source : sources) {
+            JsonNode metadata = source.path("metadata");
+            results.add(new KnowledgeChatSource(
+                    textValue(
+                            source, "sourceId", textValue(source, "source_id", textValue(metadata, "sourceId", null))),
+                    textValue(
+                            source,
+                            "knowledgeBase",
+                            textValue(source, "datasetName", textValue(source, "datasetId", null))),
+                    textValue(
+                            source,
+                            "contentType",
+                            textValue(source, "sourceType", textValue(metadata, "contentType", null))),
+                    textValue(source, "contentId", textValue(metadata, "contentId", null)),
+                    textValue(source, "title", textValue(source, "name", textValue(source, "sourceName", null))),
+                    textValue(source, "snippet", textValue(source, "content", textValue(source, "text", null))),
+                    doubleValue(source, "score", doubleValue(source, "similarity", null)),
+                    rawMap(source)));
+        }
+        return results;
+    }
+
+    private JsonNode responseDataNode(JsonNode body) {
+        JsonNode responseData = body.path("responseData");
+        if (!responseData.isMissingNode() && !responseData.isNull()) {
+            return responseData;
+        }
+        return dataNode(body).path("responseData");
+    }
+
+    private JsonNode firstPresent(JsonNode... nodes) {
+        for (JsonNode node : nodes) {
+            if (node != null && !node.isMissingNode() && !node.isNull()) {
+                return node;
+            }
+        }
+        return objectMapper.getNodeFactory().missingNode();
     }
 
     private JsonNode post(String path, Map<String, Object> payload) {
@@ -257,6 +518,12 @@ public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
         headers.setBearerAuth(resolveChatApiKey());
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+        return headers;
+    }
+
+    private HttpHeaders chatStreamHeaders() {
+        HttpHeaders headers = chatHeaders();
+        headers.setAccept(List.of(MediaType.TEXT_EVENT_STREAM));
         return headers;
     }
 
@@ -314,6 +581,66 @@ public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
             return records;
         }
         return data.isArray() ? data : objectMapper.createArrayNode();
+    }
+
+    private boolean supportsFastGptSync() {
+        Boolean cachedValue = supportsSyncCache;
+        if (cachedValue != null) {
+            return cachedValue;
+        }
+        Boolean detectedValue = detectSupportsFastGptSync();
+        if (detectedValue != null) {
+            supportsSyncCache = detectedValue;
+            return detectedValue;
+        }
+        return true;
+    }
+
+    private Boolean detectSupportsFastGptSync() {
+        String knowledgeBaseId = configuredKnowledgeBaseId();
+        Map<String, Object> payload = new LinkedHashMap<>();
+        payload.put("pageNum", 1);
+        payload.put("pageSize", 100);
+        JsonNode body;
+        try {
+            body = post("/api/core/dataset/list", payload);
+        } catch (RestClientException ex) {
+            return null;
+        }
+        JsonNode listNode = listNode(dataNode(body));
+        if (!listNode.isArray()) {
+            return null;
+        }
+        for (JsonNode item : listNode) {
+            String itemId = textValue(item, "_id", textValue(item, "datasetId", textValue(item, "id", null)));
+            if (knowledgeBaseId.equals(itemId)) {
+                return hasEmbeddingVectorModel(item);
+            }
+        }
+        return null;
+    }
+
+    private boolean hasEmbeddingVectorModel(JsonNode dataset) {
+        JsonNode vectorModel = dataset.path("vectorModel");
+        if (vectorModel.isMissingNode() || vectorModel.isNull()) {
+            return false;
+        }
+        if (vectorModel.isTextual()) {
+            return StringUtils.hasText(vectorModel.asText());
+        }
+        return StringUtils.hasText(textValue(vectorModel, "model", null))
+                || "embedding".equalsIgnoreCase(textValue(vectorModel, "type", null));
+    }
+
+    private boolean isNotSupportSync(RestClientResponseException ex) {
+        JsonNode body;
+        try {
+            body = readJson(ex.getResponseBodyAsString());
+        } catch (RuntimeException parseException) {
+            return false;
+        }
+        return body.path("code").asInt() == 501001
+                || "notSupportSync".equalsIgnoreCase(textValue(body, "statusText", null));
     }
 
     private Map<String, Object> rawMap(JsonNode body) {
@@ -380,10 +707,61 @@ public class FastGptKnowledgeBaseClient implements KnowledgeBaseClient {
         return value.asLong();
     }
 
+    private Integer intValue(JsonNode node, String fieldName, Integer fallback) {
+        JsonNode value = node.path(fieldName);
+        if (value.isMissingNode() || value.isNull()) {
+            return fallback;
+        }
+        return value.asInt();
+    }
+
+    private Double doubleValue(JsonNode node, String fieldName, Double fallback) {
+        JsonNode value = node.path(fieldName);
+        if (value.isMissingNode() || value.isNull()) {
+            return fallback;
+        }
+        return value.asDouble();
+    }
+
     private String textOption(Map<String, Object> options, String key) {
         if (options == null || !options.containsKey(key) || options.get(key) == null) {
             return null;
         }
         return options.get(key).toString();
     }
+
+    private static final class ChatStreamAccumulator {
+
+        private final StringBuilder content = new StringBuilder();
+        private JsonNode lastPayload;
+        private JsonNode finalPayload;
+
+        private void append(String delta) {
+            content.append(delta);
+        }
+
+        private void remember(JsonNode body) {
+            lastPayload = body;
+        }
+
+        private void markFinal(JsonNode body) {
+            finalPayload = body;
+        }
+
+        private void markDone() {
+            if (finalPayload == null) {
+                finalPayload = lastPayload;
+            }
+        }
+
+        private boolean hasContent() {
+            return !content.isEmpty();
+        }
+
+        private ChatStreamResult toResult() {
+            return new ChatStreamResult(content.toString(), finalPayload == null ? lastPayload : finalPayload);
+        }
+    }
+
+    private record ChatStreamResult(String content, JsonNode finalPayload) {}
 }
